# gofi

./: .gitignore  README.md  pyproject.toml  questions.md  rezultati.md  s3.py  s3_demo.py  s3_descent_generators.py  s3_norm_loss_weights.txt  s3_notnorm_loss_weights.txt  setup.py  simple_demo.py  testisn=1.npy  testisn=2.npy  tmp.py  tmp.txt  tmpd.py
SAFA/: presentation.tex
SAFA/slides/: test.tex
gofi/: analysis.ipynb  groups.py  models.py
gofi/actions/: actions.ipynb  loss.py  model.py  opt.py
gofi/adameve/: README.md  adamEVE.py  adamWN.py
gofi/autograd/: S3->R.py  demo_S3_O2.py  grid.py  loss.py  models.py  torch_settings.py  training.py
gofi/graphs/: gnn_vonc.py  graph.py  loss.py  opt.py
gofi/notebooks/: action.ipynb  graphs.ipynb
gofi/ode/: odvodi.ipynb  test.ipynb
gofi/plot/: colors.py
gofi/torch/: models.py  test.py  training.py
presentation/drawing/: tmp.py
src/: S3->R.py  analysis.ipynb  demo.py  demo_S3_O2.py  grid.py  groups.py  loss.py  models.py
src/actions/: actions.ipynb
tests/: testis.npy
thesis/: literatura.bib  primozic-27222028-2025.aux  primozic-27222028-2025.bbl-SAVE-ERROR  primozic-27222028-2025.bcf-SAVE-ERROR  primozic-27222028-2025.blg  primozic-27222028-2025.fdb_latexmk  primozic-27222028-2025.fls  primozic-27222028-2025.synctex(busy)  primozic-27222028-2025.tex  primozic-27222028-2025.xdv
training/: cayley_overparam.py
zagovor/: README.md  presentation.aux  presentation.fdb_latexmk  presentation.fls  presentation.nav  presentation.snm  presentation.tex  presentation.xdv
zapiski/: teorija.md
(+87 files in other folders)
