[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gofi"
version = "0.1.0"
description = "Homomorphisms are limits of gradient flow equations. Find representations, group actions and graph morphisms."
authors = [
    { name = "Urh Primožič", email = "urh.primozic@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/urhprimozic/gofi"
